[package]
name = "laurier"
version = "0.1.1"
edition = "2021"
description = "ratatui helper library"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
documentation = "https://docs.rs/laurier/"
homepage = "https://github.com/lusingander/laurier"
repository = "https://github.com/lusingander/laurier"
readme = "README.md"
license = "MIT"
keywords = []
categories = []
rust-version = "1.79.0"

[dependencies]
ratatui = "0.29.0"

[dev-dependencies]
rstest = "0.26.1"
