[package]
name = "laurier"
version = "0.1.1"
edition = "2021"
description = "ratatui helper library"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
documentation = "https://docs.rs/laurier/"
homepage = "https://github.com/lusingander/laurier"
repository = "https://github.com/lusingander/laurier"
readme = "README.md"
license = "MIT"
keywords = []
categories = []
rust-version = "1.82.0"

[dependencies]
console = "0.16.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }

[dev-dependencies]
rstest = "0.26.1"
