[package]
name = "laurier"
version = "0.2.0"
edition = "2021"
description = "ratatui helper library"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
documentation = "https://docs.rs/laurier/"
homepage = "https://github.com/lusingander/laurier"
repository = "https://github.com/lusingander/laurier"
readme = "README.md"
license = "MIT"
keywords = []
categories = []
rust-version = "1.82.0"

[dependencies]
console = "0.16.2"
ratatui-core = "0.1.0"
ratatui-crossterm = "0.1.0"
ratatui-widgets = "0.3.0"

[dev-dependencies]
rstest = "0.26.1"
